--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
